--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@
 body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; /* A good stack of modern sans-serif fonts */
     line-height: 1.6;
-    color: #333; /* Default text color */
-    background-color: #fff; /* Default background color */
+    color: #2E1C2B; /* Default text color */
+    background-color: #EAE1DF; /* Default background color */
 }
 
 /* Basic link styling */
@@ -28,7 +28,7 @@ img {
 }
 /* Header and Navigation */
 header {
-    background-color: #fff; /* White background */
+    background-color: #EAE1DF; /* White background */
     padding: 1rem 2rem; /* Add some padding */
     display: flex; /* Use Flexbox for layout */
     justify-content: space-between; /* Space out the logo and nav */
@@ -37,9 +37,10 @@ header {
 }
 
 header h1 {
-    font-size: 1.5rem;
-    font-weight: bold;
-    color: #333; /* Match body text color */
+    font-family: "Playball", cursive;
+    font-weight: 400;
+    font-style: normal;
+    color: #2E1C2B; /* Match body text color */
 }
 
 nav ul {
