--- a/style.css
+++ b/style.css
@@ -6,7 +6,12 @@
 }
 
 body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; /* A good stack of modern sans-serif fonts */
+    font-family: "Noto Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-variation-settings:
+    "wdth" 100;
     line-height: 1.6;
     color: #2E1C2B; /* Default text color */
     background-color: #EAE1DF; /* Default background color */
